--- a/exercise3.html
+++ b/exercise3.html
@@ -134,6 +134,10 @@
             margin-bottom: 4px;
             gap: 10px;
         }
+        button:hover {
+            color: #fff;
+            background-color: #516FD4;
+        }
 
         .row {
             gap: 16px;
